syntax = "proto3";

package com.acowg.peer_edge_proto;

service ScreenshotCaptureService {
  // Edge requests screenshots from the Peer
  rpc CaptureScreenshots(ScreenshotCaptureRequest) returns (stream ScreenshotCaptureResponse);
}

message ScreenshotCaptureRequest {
  string catalog_uuid = 1;
  int32 quantity = 2;
}

message ScreenshotCaptureResponse {
  string catalog_uuid = 1;
  int32 frame_number = 2;
  bytes screenshot = 3;
}